Using ngIf to Output Data Conditionally

--- a/02-angular-basics/src/app/servers/servers.component.html
+++ b/02-angular-basics/src/app/servers/servers.component.html
@@ -13,6 +13,7 @@
 </button>
 <!--<p>{{allowNewServer}}</p>-->
 <!--<p [innerText]="allowNewServer"></p>-->
-<p>{{serverCreationStatus}}</p>
+<!--<p>{{serverCreationStatus}}</p>-->
+<p *ngIf="serverCreated">Server was created, server name is {{serverName}}</p>
 <app-server></app-server>
 <app-server></app-server>
